mangosdk/src/test/resources/valid/SimpleTestClass.java
import java.util.RandomAccess;

import org.mangosdk.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public class SimpleTestClass implements RandomAccess {
	
}
