mangosdk/src/test/resources/invalid/NoExtentionTestClass.java
import java.util.ArrayList;

import org.mangosdk.spi.ProviderFor;

@ProviderFor(ArrayList.class)
public class NoExtentionTestClass {
}
